--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cowsay (3.03-10) unstable; urgency=low
+
+  * Adopt this package (closes: #579367)
+
+ -- Francois Marier <francois@debian.org>  Wed, 28 Apr 2010 13:34:23 +1200
+
 cowsay (3.03-9.2) unstable; urgency=low
 
   * NMU to fix breakages introduced with last NMU.
