--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,9 @@ cowsay (3.03-10) unstable; urgency=low
   * Adopt this package (closes: #579367)
   * Add vcs-git fields
   * Bump Standards-Version up to 3.8.4
+  * Bump debhelper compatibility to 7
 
- -- Francois Marier <francois@debian.org>  Wed, 28 Apr 2010 13:35:20 +1200
+ -- Francois Marier <francois@debian.org>  Wed, 28 Apr 2010 13:35:59 +1200
 
 cowsay (3.03-9.2) unstable; urgency=low
 
