--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,15 @@
 cowsay (3.03-10) unstable; urgency=low
 
   * Adopt this package (closes: #579367)
+  * Acknowledge NMUs
+    (closes: #480404, #480405, #452816, #367310, #404287)
+
   * Add vcs-git fields
   * Bump Standards-Version up to 3.8.4
   * Bump debhelper compatibility to 7
   * Move to 3.0 (quilt) source package format
 
- -- Francois Marier <francois@debian.org>  Wed, 28 Apr 2010 13:39:14 +1200
+ -- Francois Marier <francois@debian.org>  Wed, 28 Apr 2010 13:40:48 +1200
 
 cowsay (3.03-9.2) unstable; urgency=low
 
