--- a/debian/changelog
+++ b/debian/changelog
@@ -4,12 +4,13 @@ cowsay (3.03-10) unstable; urgency=low
   * Acknowledge NMUs
     (closes: #480404, #480405, #452816, #367310, #404287)
 
+  * Move all customisations to separate DEP-3 patches
   * Add vcs-git fields
   * Bump Standards-Version up to 3.8.4
   * Bump debhelper compatibility to 7
   * Move to 3.0 (quilt) source package format
 
- -- Francois Marier <francois@debian.org>  Wed, 28 Apr 2010 13:40:48 +1200
+ -- Francois Marier <francois@debian.org>  Wed, 28 Apr 2010 16:03:29 +1200
 
 cowsay (3.03-9.2) unstable; urgency=low
 
