--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cowsay (3.03+dfsg1-2) unstable; urgency=medium
+
+  * Update Rhonda's copyright statement on cows/gnu and cows/suse
+
+ -- Francois Marier <francois@debian.org>  Sat, 21 Aug 2010 00:42:31 -0400
+
 cowsay (3.03+dfsg1-1) unstable; urgency=medium
 
   * Removed cows from unknown artists and added authors of contributed
