--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cowsay (3.03+dfsg1-3) unstable; urgency=low
+
+  * Bump debhelper compatibility to 8
+
+ -- Francois Marier <francois@debian.org>  Wed, 22 Dec 2010 13:35:39 +1300
+
 cowsay (3.03+dfsg1-2) unstable; urgency=medium
 
   * Update Rhonda's copyright statement on cows/gnu and cows/suse
