--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-cowsay (3.03+dfsg1-4) UNRELEASED; urgency=low
+cowsay (3.03+dfsg1-4) unstable; urgency=low
 
   * Add a cowsay_random script under examples/
+  * Bump Standards-Version to 3.9.3
 
  -- Francois Marier <francois@debian.org>  Fri, 24 Dec 2010 22:44:34 +1300
 
