--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cowsay (3.03+dfsg1-5) UNRELEASED; urgency=low
+
+  * Fix watch file
+
+ -- Francois Marier <francois@debian.org>  Wed, 18 Jul 2012 12:32:53 +1200
+
 cowsay (3.03+dfsg1-4) unstable; urgency=low
 
   * Add a cowsay_random script under examples/
