--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-cowsay (3.03+dfsg1-5) UNRELEASED; urgency=low
+cowsay (3.03+dfsg1-6) unstable; urgency=low
 
-  * Fix watch file
+  * Fix watch file and add upstream's GPG key
 
- -- Francois Marier <francois@debian.org>  Wed, 18 Jul 2012 12:32:53 +1200
+ -- Francois Marier <francois@debian.org>  Sat, 01 Feb 2014 22:32:38 +1300
 
 cowsay (3.03+dfsg1-4) unstable; urgency=low
 
