--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cowsay (3.03+dfsg1-7) UNRELEASED; urgency=medium
+
+  * Fix "homepage" URL
+
+ -- Francois Marier <francois@debian.org>  Thu, 13 Feb 2014 08:43:20 +1300
+
 cowsay (3.03+dfsg1-6) unstable; urgency=low
 
   * Fix watch file and add upstream's GPG key
