--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cowsay (3.03+dfsg1-10) unstable; urgency=medium
+
+  * Bump Standards-Version up to 3.9.6
+
+ -- Francois Marier <francois@debian.org>  Thu, 18 Sep 2014 22:25:00 +1200
+
 cowsay (3.03+dfsg1-9) unstable; urgency=medium
 
   * Remove upstream's GPG key since it's not valid in GPG2
