--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 cowsay (3.03+dfsg1-12) unstable; urgency=medium
 
+  [ Tony Maillefaud ]
   * Adopt this package (closes: #777101)
+
+  [ Francois Marier ]
+  * Run wrap-and-sort
 
  -- Tony Maillefaud <maltouzes@gmail.com>  Thu, 03 Sep 2015 12:19:13 +0200
 
