--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cowsay (3.03+dfsg1-13) unstable; urgency=medium
+
+  * Add cowsay-off package (closes: #769194) 
+
+ -- Tony Maillefaud <maltouzes@gmail.com>  Tue, 29 Sep 2015 11:28:17 +0200
+
 cowsay (3.03+dfsg1-12) unstable; urgency=medium
 
   [ Tony Maillefaud ]
