--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 cowsay (3.03+dfsg1-13) unstable; urgency=medium
 
+  [ Tony Maillefaud ]
   * Add cowsay-off package (closes: #769194) 
+
+  [ Francois Marier ]
+  * Update VCS-Browser URL
 
  -- Tony Maillefaud <maltouzes@gmail.com>  Tue, 06 Oct 2015 10:28:17 +0200
 
