--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-cowsay (3.03+dfsg1-14) UNRELEASED; urgency=medium
+cowsay (3.03+dfsg1-14) unstable; urgency=medium
 
   [ Tony Maillefaud ]
   * Add patch 03-ansi_code_width_color_widechar.patch
