--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cowsay (3.03+dfsg1-15) UNRELEASED; urgency=high
+
+  * Add libtext-charwidth-perl Depends (closes: #819115)
+
+ -- Tony Maillefaud <maltouzes@gmail.com>  Thu, 24 Mar 2016 09:29:49 +0100
+
 cowsay (3.03+dfsg1-14) unstable; urgency=medium
 
   [ Tony Maillefaud ]
