--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,5 +1,12 @@
 cowsay (3.03+dfsg1-17) unstable; urgency=medium
 
-  Since cowsay 3.03+dfsg1-13 cowsay was split in two packages (e.g cowsay and cowsay-off). cowsay-off package contains cows which some may consider to be offencive.
+  Since cowsay 3.03+dfsg1-13, cowsay is now split into two packages:
+  cowsay and cowsay-off. cowsay contains the binaries as well as the
+  main cows. cowsay-off package contains the cows which some people
+  may consider to be offensive.
+
+  If you have installed cowsay a while ago, you may be relying on cows
+  which have been moved to cowsay-off. If that's the case, you'll need
+  to install that package to continue using them.
 
  -- Tony Maillefaud <maltouzes@gmail.com>  Sun, 27 Nov 2016 13:56:26 +0100
