- Remove copyright statement on cows/meow and cows/kitty

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-cowsay (3.03+dfsg1-17) UNRELEASED; urgency=medium
+cowsay (3.03+dfsg2-1) UNRELEASED; urgency=medium
 
-  * Update copyright (closes: #367347, #592917)
+  * Remove cows copyright issues (closes: #367347, #592917)
   * Add NEWS file (closes: #842801)
 
- -- Tony Maillefaud <maltouzes@gmail.com>  Sun, 27 Nov 2016 13:56:26 +0100
+ -- Tony Maillefaud <maltouzes@gmail.com>  Tue, 27 Dec 2016 11:00:59 +0200
 
 cowsay (3.03+dfsg1-16) unstable; urgency=medium
 
