--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cowsay (3.03+dfsg2-2) UNRELEASED; urgency=medium
+
+  * Move bong.cow and beavis.zen.cow to cowsay-off package (closes: #851181)
+
+ -- Tony Maillefaud <maltouzes@gmail.com>  Fri, 13 Jan 2017 09:00:10 +0100
+
 cowsay (3.03+dfsg2-1) unstable; urgency=medium
 
   * Remove cows (meow and kitty)
