--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cowsay (3.03+dfsg2-3) unstable; urgency=high
+
+  * Update Depends, Replaces and Breaks version
+   - bong.cow and beavis.zen.cow owned by cowsay and cowsay-off (closes: #851552)
+
+ -- Tony Maillefaud <maltouzes@gmail.com>  Mon, 16 Jan 2017 21:23:47 +0100
+
 cowsay (3.03+dfsg2-2) unstable; urgency=medium
 
   * Move bong.cow and beavis.zen.cow to cowsay-off package (closes: #851181)
