--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ cowsay (3.03+dfsg2-4) unstable; urgency=medium
 
   * Cowsay-off
    - Use suggests field instead of Recommends (closes: #882085)
+  * Change standards-version (4.1.1)
 
  -- Tony Maillefaud <maltouzes@gmail.com>  Wed, 22 Nov 2017 18:17:38 +0100
 
