--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,10 @@
 cowsay (3.03+dfsg2-5) unstable; urgency=medium
 
-  * remove controversial cows from cowsay-off
+  [ Tony Maillefaud ]
+  * Remove controversial cows from cowsay-off
+
+  [ Francois Marier ]
+  * Move VCS fields to salsa
 
  -- Tony Maillefaud <maltouzes@gmail.com>  Wed, 29 Nov 2017 18:01:56 +0100
 
