--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ cowsay (3.03+dfsg2-5) unstable; urgency=medium
 
   [ Francois Marier ]
   * Move VCS fields to salsa
+  * Bump debhelper compat to 11
 
  -- Tony Maillefaud <maltouzes@gmail.com>  Wed, 29 Nov 2017 18:01:56 +0100
 
