--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ cowsay (3.03+dfsg2-5) unstable; urgency=medium
   * Move VCS fields to salsa
   * Bump debhelper compat to 11
   * Use HTTPS copyright URL in debian/copyright
+  * Bump copyright years in debian/copyright
 
  -- Tony Maillefaud <maltouzes@gmail.com>  Wed, 29 Nov 2017 18:01:56 +0100
 
