--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cowsay (3.03+dfsg2-5.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * Add kangaroo cow. 
+
+ -- Paul Hardy <unifoundry@unifoundry.com>  Sat, 10 Nov 2018 05:40:41 -0800
+
 cowsay (3.03+dfsg2-5) unstable; urgency=medium
 
   [ Tony Maillefaud ]
