--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-cowsay (3.03+dfsg2-5.1) unstable; urgency=medium
+cowsay (3.03+dfsg2-6) unstable; urgency=medium
 
-  * Non-maintainer upload.
-  * Add kangaroo cow. 
+  * QA upload.
+  * Add kangaroo cow (closes: #700576).
 
- -- Paul Hardy <unifoundry@unifoundry.com>  Sat, 10 Nov 2018 05:40:41 -0800
+ -- Paul Hardy <unifoundry@unifoundry.com>  Sun, 03 Feb 2019 09:39:28 -0800
 
 cowsay (3.03+dfsg2-5) unstable; urgency=medium
 
