--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ cowsay (3.03+dfsg2-7) unstable; urgency=medium
   * Fix lintian warning about spelling of 'balloons' in patch
   * Add fox cow (closes: #888229)
   * Bump Standards-Version to 4.4.1
+  * Bump debhelper compat to 12
 
  -- James McDonald <james@jamesmcdonald.com>  Mon, 28 Oct 2019 09:43:46 +0100
 
